Revert "Update experience section to avoid page breaks inside (for print)"
This reverts commit 3891dda7430a471d3afb42eb982c3fba33a19d56.

--- a/src/html/organisms/experience.scss
+++ b/src/html/organisms/experience.scss
@@ -2,8 +2,6 @@
   --atoms--grid-columns: 2;
   --atoms--grid-columns--print: 1;
 
-  break-inside: avoid;
-
   .organisms__experience__section-header {
     font-size: 1.5em;
   }
@@ -24,7 +22,6 @@
 
   .organisms__experience__experiences,
   .organisms__experience__summary {
-    break-inside: avoid;
     margin-left: 16px;
   }
 
